# ScreenHop

./: .gitignore  Cargo.toml  LICENSE  README.md
.gemini/skills/screenhop/: SKILL.md
.github/workflows/: build.yml
assets/: ScreenHop.icns
crates/app/: Cargo.toml  app.debug.manifest  app.manifest  build.rs  icon.debug.rc  icon.rc
crates/app/src/: engine.rs  main.rs  slint_ui.rs  tray.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  lib.rs  monitor.rs  updater.rs
crates/platform/: Cargo.toml
crates/platform/src/: lib.rs
crates/platform/src/macos/: autostart.rs  hittest.rs  hook.rs  mod.rs  monitor.rs  window.rs
crates/platform/src/windows/: autostart.rs  hittest.rs  hook.rs  mod.rs  monitor.rs  window.rs
