[workspace]
resolver = "2"
members = ["crates/core", "crates/platform", "crates/app"]

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["dongdong"]
license = "MIT"
repository = "https://github.com/dongdongGit/ScreenHop"

[workspace.dependencies]
# 共享依赖版本
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = ["NSString", "NSArray"] }
objc2-app-kit = { version = "0.2", features = ["NSAccessibility", "NSEvent"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
semver = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt", "macros"] }
