[package]
name = "screenhop"
version.workspace = true
edition.workspace = true

[[bin]]
name = "screenhop"
path = "src/main.rs"

[dependencies]
screenhop-core = { path = "../core" }
screenhop-platform = { path = "../platform" }
log.workspace = true
env_logger = "0.11"
anyhow.workspace = true
tray-icon = "0.19"
muda = "0.15"
single-instance = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"
