[package]
name = "screenhop"
version.workspace = true
edition.workspace = true

[[bin]]
name = "screenhop"
path = "src/main.rs"

[dependencies]
screenhop-core = { path = "../core" }
screenhop-platform = { path = "../platform" }
log.workspace = true
env_logger = "0.11"
anyhow.workspace = true
tray-icon = "0.21.3"
muda = "0.17.1"
single-instance = "0.3"
open = "5"
tokio.workspace = true
tao = "0.34.5"
slint = "1.15.1"
image = "0.24"
imageproc = "0.26.0"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"
